--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -10,6 +10,8 @@ services:
       - ./:/go/src/app/
     working_dir: /go/src/app/
     command: go run main.go
+    depends_on:
+      - mongo.local
   mongo.local:
     image: mongo:latest
     environment:
